test/Fail/Issue1698-data.err
Issue1698-data.agda:2.3-12: error: [Syntax.WrongContentBlock]
A data definition can only contain type signatures, possibly under
keyword instance
